packages/go/include/kreuzcrawl.h

typedef struct KCRAWLCrawlConfig KCRAWLCrawlConfig;
typedef struct KCRAWLCrawlEngineHandle KCRAWLCrawlEngineHandle;
typedef struct KCRAWLCrawlResult KCRAWLCrawlResult;
typedef struct KCRAWLMapResult KCRAWLMapResult;
typedef struct KCRAWLScrapeResult KCRAWLScrapeResult;
/**
 * Return the last error code (0 means no error).
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
int32_t kcrawl_last_error_code(void);
/**
 * Return the last error message. The pointer is valid until the next FFI call on this thread.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
const char *kcrawl_last_error_context(void);
/**
 * Free a string previously returned by this library.
 * # Safety
 * Pointer must have been returned by this library, or be null.
 */
void kcrawl_free_string(char *ptr);
/**
 * Create a new crawl engine with the given configuration.
 *
 * If `config` is `None`, uses [`CrawlConfig::default()`].
 * Returns an error if the configuration is invalid.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
KCRAWLCrawlEngineHandle *kcrawl_create_engine(const KCRAWLCrawlConfig *config);
/**
 * Scrape a single URL, returning extracted page data.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
KCRAWLScrapeResult *kcrawl_scrape(const KCRAWLCrawlEngineHandle *engine,
                                  const char *url);
/**
 * Crawl a website starting from `url`, following links up to the configured depth.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
KCRAWLCrawlResult *kcrawl_crawl(const KCRAWLCrawlEngineHandle *engine,
                                const char *url);
/**
 * Discover all pages on a website by following links and sitemaps.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
KCRAWLMapResult *kcrawl_map_urls(const KCRAWLCrawlEngineHandle *engine,
                                 const char *url);
/**
 * Scrape multiple URLs concurrently.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kcrawl_batch_scrape(const KCRAWLCrawlEngineHandle *engine,
                          const char *urls);
/**
 * Crawl multiple seed URLs concurrently, each following links to configured depth.
 * # Safety
 * Caller must ensure all pointer arguments are valid or null.
 * Returned pointers must be freed with the appropriate free function.
 */
char *kcrawl_batch_crawl(const KCRAWLCrawlEngineHandle *engine,
                         const char *urls);