packages/csharp/Kreuzcrawl/NativeMethods.cs

// This file is auto-generated by alef. DO NOT EDIT.
using System.Runtime.InteropServices;

namespace Kreuzcrawl;

internal static partial class NativeMethods
{
    private const string LibName = "kreuzcrawl_ffi";

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_create_engine")]
    internal static extern IntPtr CreateEngine(
        CrawlConfig config
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_scrape")]
    internal static extern IntPtr Scrape(
        CrawlEngineHandle engine,
        [MarshalAs(UnmanagedType.LPStr)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_crawl")]
    internal static extern IntPtr Crawl(
        CrawlEngineHandle engine,
        [MarshalAs(UnmanagedType.LPStr)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_map_urls")]
    internal static extern IntPtr MapUrls(
        CrawlEngineHandle engine,
        [MarshalAs(UnmanagedType.LPStr)] string url
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_scrape")]
    internal static extern IntPtr BatchScrape(
        CrawlEngineHandle engine,
        List<string> urls
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_batch_crawl")]
    internal static extern IntPtr BatchCrawl(
        CrawlEngineHandle engine,
        List<string> urls
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_default")]
    internal static extern IntPtr Default();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "kcrawl_free_string")]
    internal static extern void FreeString(IntPtr ptr);
}
